<resources>
    <string name="app_name">Virtuary</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="virtuary_logo">Virtuary Logo</string>
    <string name="virtuary_description">Artifact Registry Platform</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="my_items">My items</string>
    <string name="family">Family</string>
    <string name="edit_profile">Manage account</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile picture</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_alias">Set alias</string>
    <string name="related_items">Related items</string>
    <string name="show_all">Show all</string>
    <string name="this_user_has_no_item">This user has no items</string>
    <string name="title">Title:</string>
    <string name="current_location">Current location:</string>
    <string name="related_to">Related to:</string>
    <string name="story">Story:</string>
    <string name="profile_edit_general">Edit profile</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_new_password">New password</string>
    <string name="profile_current_password">Current password</string>
    <string name="profile_image_description">Your profile picture</string>
    <string name="profile_edit_image_description">Edit your profile picture</string>
    <string name="logout">Logout</string>
    <string name="edit_item">Edit item</string>
    <string name="remove_item">Remove item</string>
    <string name="search_hint">Search item by name or user</string>
    <string name="family_search_hint">Search for family member</string>
    <string name="member_item_search_hint">Search member\'s items</string>
    <string name="search">Search</string>
    <string name="add_item_dialog_add_picture">Add picture</string>
    <string name="add_item_dialog_add_picture_description">Take a new photo or select one from your existing photo library</string>
    <string name="add_item_dialog_camera">Camera</string>
    <string name="add_item_dialog_gallery">Gallery</string>
    <string name="add_item">Add item</string>
    <string name="member_details">Details</string>
    <string name="possessive_items">%1$s\'s items</string>
    <string name="select_picture">Select picture</string>
    <string name="note_password_reset_sent">Password reset email sent</string>
    <string name="error_title_blank">Enter title</string>
    <string name="error_email_not_found">There is no account associated with this email</string>
    <string name="error_email_in_use">Email already in use</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_name_blank">Please enter your name</string>
    <string name="error_password_short">Password need to be of length 6 or more</string>
    <string name="error_password_blank">Password cannot be blank</string>
    <string name="error_server_unreachable">Unable to reach server</string>
    <string name="error_user_profile_not_set">Unable to set user profile</string>
    <string name="pref_language">Language</string>
    <string name="pref_theme">Dark Mode</string>
    <string name="about_content" >Virtuary is a family artifact organization app that aims to allow a family to keep track of items that are of significance to their history. Virtuary was made by a group of 4 university students who were tasked with creating an application for a client of our choosing. Thus, work began on this app in July 2019.</string>
    <string name="remove_alias">Remove alias</string>
</resources>
