<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="memberViewModel"
                type="com.virtuary.app.screens.family.member.MemberViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/member_picture"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_background"
                    tools:srcCompat="@tools:sample/avatars" />

            <TextView
                    android:id="@+id/member_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/member_picture" />

            <TextView
                    android:id="@+id/related_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/related_items"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/member_name" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_all_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/show_all"
                    android:theme="@style/MaterialTheme"
                    app:cornerRadius="100dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/related_items"
                    app:layout_constraintStart_toEndOf="@+id/related_items" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
