<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="changePasswordViewModel"
            type="com.virtuary.app.screens.preferences.ChangePasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical"
            tools:context=".screens.preferences.ChangePassword">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_current_password"
                    android:inputType="textPassword"
                    android:text="@={changePasswordViewModel.currentPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_new_password"
                    android:inputType="textPassword"
                    android:text="@={changePasswordViewModel.newPassword}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="@{() -> changePasswordViewModel.onClick()}"
                android:text="@string/profile_change_password"
                android:textAllCaps="false"
                android:textColorLink="@color/black_overlay"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_password_text" />

        </LinearLayout>
    </ScrollView>
</layout>