<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editAccountFragment"
            type="com.virtuary.app.screens.preferences.EditAccountFragment" />
    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/edit_account_drawable"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/profile_edit_general"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/edit_account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/profile_edit_general"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </TableRow>

        <TableRow
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/change_password_drawable"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/profile_change_password"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_lock" />

            <TextView
                android:id="@+id/change_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/profile_change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </TableRow>

        <TableRow
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/forgot_password_drawable"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/forgot_password"
                android:tint="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_help" />

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>
    </TableLayout>
</layout>